--- a/table/docker-compose.yaml
+++ b/table/docker-compose.yaml
@@ -1,6 +1,39 @@
 version: '3'
 services:
-  table:
-    image: table:latest
+#  table:
+#    image: table:latest
+#    ports:
+#      - 8080:8080
+
+  db:
+    image: mariadb:10.1.34
+    environment:
+      PROXY_ADDRESS_FORWARDING: 'true'
+      MYSQL_ROOT_PASSWORD: oenik
+      MYSQL_DATABASE: keycloak
+      MYSQL_USER: oenik
+      MYSQL_PASSWORD: oenik
     ports:
-      - 8080:8080
+      - '3306:3306'
+    restart: on-failure
+    volumes:
+      - ./disks/sql:/var/lib/mysql
+
+  keycloak:
+    image: jboss/keycloak:12.0.4
+    ports:
+      - "6080:8080"
+    environment:
+      - KEYCLOAK_USER=admin
+      - KEYCLOAK_PASSWORD=oenik
+      - DB_VENDOR=mariadb
+      - DB_USER=oenik
+      - DB_PASSWORD=oenik
+      - DB_ADDR=db
+      - DB_DATABASE=keycloak
+      - DB_PORT=3306
+      - KEYCLOAK_IMPORT=/tmp/example-realm.json
+    volumes:
+      - ./realm-export.json:/tmp/example-realm.json
+    depends_on:
+      - db
