--- a/table/src/main/resources/application.properties
+++ b/table/src/main/resources/application.properties
@@ -1,1 +1,14 @@
+keycloak.auth-server-url=http://localhost:6080/auth
+keycloak.realm=oenik
+keycloak.resource=account
+keycloak.public-client=true
+keycloak.ssl-required= external
+keycloak.confidential-port= 0
+keycloak.use-resource-role-mappings = true
+keycloak.principal-attribute=preferred_username
 
+keycloak.security-constraints[0].authRoles[0] = table
+keycloak.security-constraints[0].security-collections[0].patterns[0] = /waiter/*
+keycloak.security-constraints[0].security-collections[0].methods[0]=POST
+keycloak.security-constraints[0].security-collections[0].methods[1]=PUT
+keycloak.security-constraints[0].security-collections[0].methods[2]=DELETE
