--- a/table/pom.xml
+++ b/table/pom.xml
@@ -35,8 +35,14 @@
 		</dependency>
 
 		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
+
+		<dependency>
 			<groupId>org.keycloak</groupId>
 			<artifactId>keycloak-spring-boot-starter</artifactId>
+			<version>19.0.3</version>
 		</dependency>
 
 		<dependency>
