--- a/table/src/main/resources/application.properties
+++ b/table/src/main/resources/application.properties
@@ -12,3 +12,13 @@ keycloak.security-constraints[0].security-collections[0].patterns[0] = /waiter/*
 keycloak.security-constraints[0].security-collections[0].methods[0]=POST
 keycloak.security-constraints[0].security-collections[0].methods[1]=PUT
 keycloak.security-constraints[0].security-collections[0].methods[2]=DELETE
+
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.hibernate.ddl-auto=none
+spring.datasource.url=jdbc:mysql://localhost:3306/service_table?useUnicode=true&characterEncoding=UTF-8&useSSL=false&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+
+spring.datasource.username=oenik
+spring.datasource.password=oenik
+
+spring.liquibase.enabled=true
